app/scripts/modules/kubernetes/src/v2/manifest/wizard/manifestEntry.less
.kubernetes-manifest-entry {
  resize: vertical;
}

.kubernetes-manifest-yaml-error-message {
  display: none;
}

.kubernetes-manifest-error {
  .kubernetes-manifest-yaml-error-message {
    display: block;
    position: absolute;
    width: 200px;
    padding: 0.2em 1em;
    left: 50%;
    margin-left: calc(-100px + -0.5em);
    background: red;
    color: white;
  }

  .kubernetes-manifest-entry {
    background: rgb(255, 220, 220);
  }
}

